글쓰기 페이지 생성 및 toast ui 라이브러리 적용

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -7,10 +7,16 @@
   padding-top: 150px;
 }
 
-.postCardBoardLayout{
+.homeTabWrap {
+  padding-top: 20px;
   display: flex;
   justify-content: center;
 }
+.postCardBoardLayout {
+  display: flex;
+  justify-content: center;
+}
+
 .postCardBoardWrap {
   display: flex;
   margin-top: 32px;
