--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -11,6 +11,20 @@
   padding-top: 20px;
   display: flex;
   justify-content: center;
+  button {
+    outline: none;
+    border: 2px solid #aaa;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    color: #aaa;
+    &:hover {
+      background: transparent;
+      color: #000;
+      border: 2px solid #000;
+    }
+  }
 }
 .postCardBoardLayout {
   display: flex;
@@ -35,4 +49,8 @@
 .postCardBoard {
   display: flex;
   flex-wrap: wrap;
+}
+.homeContentWrap {
+  margin-top: 600px;
+  display: block;
 }
