--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -15,10 +15,10 @@
     outline: none;
     border: 2px solid #aaa;
     font-weight: 500;
-    background: transparent;
+    // background: transparent;
     cursor: pointer;
     transition: all 0.3s ease;
-    color: #aaa;
+    // color: #aaa;
     &:hover {
       background: transparent;
       color: #000;
