--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -18,9 +18,19 @@
     justify-content: center;
     width: 1400px;
     .tab_writing_button {
+      background: white;
+      border: 0;
+      width: 5rem;
+      height: 2rem;
       position: absolute;
+      cursor: pointer;
+      border-radius: 3px;
+      color: #bbb;
       top: 1rem;
       right: 3rem;
+      &:hover {
+      color: #000;
+      }
     }
   }
 }
